--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-    
   },
   "author": "shannabsp@gamil.com",
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.3",
+    "nodemon": "^2.0.15",
     "redis": "^4.0.4"
   }
 }
